# ibasicLibrary

./: .gitignore  CMakeLists.txt  README.md  README_en.md  ibasicLibrary.sln
ibasicLibrary/: CodeMap1.dgml  IncludeFileDependencies1.dgml  cpp.hint  ibasicLibrary.cpp  ibasicLibrary.rc  ibasicLibrary.vcxproj  ibasicLibrary.vcxproj.filters  resource.h
include/: ibasicLibrary_all_public_headers
include/cppstd/: agents.h  algorithm  atomic  bit  charconv  chrono  complex  concepts  crtversion.h  deque  execution  filesystem  format  fstream  functional  future  header-units.json  immintrin.h  iomanip  istream  iterator  limits  memory  memory_resource  mutex  optional  random  ranges  sstream  syncstream  system_error  thread  type_traits  utility  valarray  variant  vcruntime.h  vector  xlocale  xmemory  (+7 more)
include/icore/: icore_all_public_headers
include/mcppstd/: thread
lib-src/libCode/: libCode.rc  libCode.vcxproj  libCode.vcxproj.filters  resource.h
lib-src/libDbg/: libDbg.rc  libDbg.vcxproj  libDbg.vcxproj.filters  resource.h
lib-src/libFile/: dllmain.cpp  libFile.rc  libFile.vcxproj  libFile.vcxproj.filters  resource.h
lib-src/libIO/: dllmain.cpp  libIO.rc  libIO.vcxproj  libIO.vcxproj.filters  resource.h
lib-src/libMessageBox/: MessageBoxDlg.cpp  MessageBoxDlg.h  dllmain.cpp  framework.h  libMessageBox.rc  libMessageBox.vcxproj  libMessageBox.vcxproj.filters  resource.h
lib-src/libNet/: libNet.rc  libNet.vcxproj  libNet.vcxproj.filters  resource.h
lib-src/libProcess/: dllmain.cpp  libProcess.rc  libProcess.vcxproj  libProcess.vcxproj.filters  resource.h
lib-src/libTime/: libTime.rc  libTime.vcxproj  libTime.vcxproj.filters  resource.h
lib-src/libmath/: dllmain.cpp  libmath.rc  libmath.vcxproj  libmath.vcxproj.filters  resource.h
test/: test_split.cpp
(+63 files in other folders)
